# ingestor-scrapper-v2

./: .flake8  .gitignore  COMO_SCRAPY_BUSCA_VARIABLES.md  README.md  format.sh  pyproject.toml  scrapy.cfg
docs/: ARQUITECTURA_SCALABLE.md  COMO_SCRAPY_FUNCIONA.md  FLUJO_SCRAPING.md  PARA_QUE_SIRVE_NORMALIZER.md
ingestor_scrapper/: __init__.py  settings.py
ingestor_scrapper/adapters/: __init__.py  fetcher_http.py  fetcher_scrapy.py  parser_bcra.py  parser_csv.py  parser_excel.py  parser_scrapethissite.py  registry.py
ingestor_scrapper/adapters/fetchers/: __init__.py
ingestor_scrapper/adapters/normalizers/: __init__.py  bcra.py  generic.py
ingestor_scrapper/adapters/outputs/: __init__.py  json.py  stdout.py
ingestor_scrapper/adapters/parsers/: __init__.py  bcra.py  bs4.py  pdf.py  registry.py
ingestor_scrapper/application/: __init__.py  bcra_use_case.py  parser_router.py  scrape_this_site_use_case.py  universal_ingest_use_case.py  use_cases.py
ingestor_scrapper/core/: __init__.py  entities.py  ports.py
ingestor_scrapper/interface/: __init__.py
ingestor_scrapper/interface/spiders/: __init__.py  bcra_spider.py  scrapethissite_spider.py  universal_spider.py
